Removed handlebars templating. Hide id-card button for mobile devices.

--- a/public/LESS/custom.less
+++ b/public/LESS/custom.less
@@ -9,13 +9,18 @@ input:focus {
 }
 // END FORMS
 
-// LOGIN LOGO
+// LOGIN
 .logo-name {
 	font-family: "PF Centro Sans Pro Light", "Verdana", "Geneva", "sans-serif";
 	color: @lighter-grey;
 }
-// LOGIN LOGO
 
+// LOGIN
+@media (max-width: 768px) {
+	#id-card-select {
+		display: none;
+	}
+}
 // CALENDAR WIDGET
 #calendar {
 	width: 100%;
