changes to login view hierarchy. Right sidebar to dashboard

--- a/public/LESS/custom.less
+++ b/public/LESS/custom.less
@@ -16,11 +16,13 @@ input:focus {
 }
 
 // LOGIN
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
 	#id-card-select {
 		display: none;
 	}
-}
+}*/
+// SIDEBAR CUSTOM MODULES
+
 // CALENDAR WIDGET
 #calendar {
 	width: 100%;
@@ -48,6 +50,9 @@ input:focus {
 
 .fc-button-content {
 	padding: 0;
+}
+.fc-content {
+	font-family: monospace;
 }
 // END CALENDAR WIDGET
 
