--- a/public/LESS/variables.less
+++ b/public/LESS/variables.less
@@ -23,7 +23,7 @@
 @grey-btn: #DDDDDD; // Grey button color
 
 @text-color: #676a6c;   // Body text
-@gray: #e8e8e9;         // Background wrapper color
+@gray: #fcfcfc;         // Background wrapper color
 @light-gray: #D1DADE;   // Default label, badget
 @label-badget-color: #5E5E5E;
 @light-blue:#f3f6fb;
@@ -44,7 +44,7 @@
 
 
 // IBOX colors ( default panel colors)
-@border-color: #e7eaec;     // IBox border
+@border-color: @lightest-grey;     // IBox border
 @ibox-title-bg:#ffffff;     // IBox Background header
 @ibox-content-bg:#ffffff;   // IBox Background content
 
@@ -59,7 +59,7 @@
 @btn-border-radius: 3px;
 
 //Navigation
-@nav-bg: #2F4050;
+@nav-bg: @cherry;
 @nav-profil-pattern: url("patterns/header-profile.png") no-repeat;
 @nav-text-color: #a7b1c2;
 
