--- a/public/LESS/base.less
+++ b/public/LESS/base.less
@@ -68,7 +68,7 @@ a:hover, a:focus {
   font-weight: 600;
 }
 
-.font-noraml {
+.font-normal {
   font-weight: 400;
 }
 
@@ -633,7 +633,7 @@ table.table-mail tr td {
 /* BACKGROUNDS */
 
 .gray-bg {
-  background-color: @gray;
+  background-color: #fcfcfc;
 }
 
 .white-bg {
