fixed a naming error

--- a/public/LESS/badgets_labels.less
+++ b/public/LESS/badgets_labels.less
@@ -60,9 +60,10 @@
 .label-white, .badge-white {
   background-color: #FFFFFF;
   color: #5E5E5E;
+  border: 1px solid @lighter-grey;
 }
 
-.label-white, .badge-disable {
+.label-disable, .badge-disable {
   background-color: #2A2E36;
   color: #8B91A0;
 }
