changed back to original font

--- a/public/LESS/base.less
+++ b/public/LESS/base.less
@@ -1,17 +1,15 @@
 // main: style.less
 
 body {
-  font-family: "PF Centro Sans Pro", "Verdana", "Geneva", "sans-serif";
+  font-family:  "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #2f4050;
-  font-size: 18px;
+  font-size: 13px;
   color: @text-color;
   overflow-x: hidden;
-
 }
 
 html,body {
   height: 100%;
-
 }
 
 body.full-height-layout #wrapper,
@@ -1202,7 +1200,10 @@ a.close-canvas-menu:hover {
 .space-30 {
   margin: 30px 0;
 }
-
+.b-b {
+	padding-bottom: 10px;
+	border-bottom: 1px solid @lightest-grey;
+}
 // Bootstrap issue in 3.3.0 with modal https://github.com/twbs/bootstrap/issues/9855
 // Fix
 body.modal-open { padding-right:inherit !important; }
