--- a/public/LESS/chat.less
+++ b/public/LESS/chat.less
@@ -4,7 +4,7 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
-  z-index: 100;
+  z-index: 9999;
 }
 
 #small-chat .badge {
@@ -17,7 +17,7 @@
   height: 38px;
   width: 38px;
   display: block;
-  background: #1ab394;
+  background: @cherry;
   padding: 9px 8px;
   text-align: center;
   color: #fff;
@@ -26,7 +26,7 @@
 
 .open-small-chat:hover {
   color: white;
-  background: #1ab394;
+  background: darken(@cherry, 5%);
 }
 
 
@@ -96,7 +96,7 @@
     }
 
     .chat-message.active {
-      background: #1ab394;
+      background: @cherry;
       color: #fff;
     }
 
