settings switches to ttu colors

--- a/public/LESS/elements.less
+++ b/public/LESS/elements.less
@@ -926,7 +926,7 @@ table.dataTable thead .sorting:after {
 }
 .onoffswitch-label {
   display: block; overflow: hidden; cursor: pointer;
-  border: 2px solid #1AB394; border-radius: 3px;
+  border: 2px solid #870042; border-radius: 3px;
 }
 .onoffswitch-inner {
   display: block; width: 200%; margin-left: -100%;
@@ -941,7 +941,7 @@ table.dataTable thead .sorting:after {
 .onoffswitch-inner:before {
   content: "ON";
   padding-left: 7px;
-  background-color: #1AB394; color: #FFFFFF;
+  background-color: #870042; color: #FFFFFF;
 }
 .onoffswitch-inner:after {
   content: "OFF";
@@ -952,7 +952,7 @@ table.dataTable thead .sorting:after {
 .onoffswitch-switch {
   display: block; width: 18px; margin: 0px;
   background: #FFFFFF;
-  border: 2px solid #1AB394; border-radius: 3px;
+  border: 2px solid #870042; border-radius: 3px;
   position: absolute; top: 0; bottom: 0; right: 36px;
   -moz-transition: all 0.3s ease-in 0s; -webkit-transition: all 0.3s ease-in 0s;
   -o-transition: all 0.3s ease-in 0s; transition: all 0.3s ease-in 0s;
