--- a/public/LESS/top_navigation.less
+++ b/public/LESS/top_navigation.less
@@ -54,9 +54,10 @@
 }
 
 .top-navigation .navbar-brand {
+  width: 150px;
   background: @cherry;
   color: #fff;
-  padding: 15px 25px;
+  padding: 0px 25px;
 }
 
 .top-navigation .navbar-top-links li:last-child {
