navbar responsive adjust

--- a/public/LESS/navigation.less
+++ b/public/LESS/navigation.less
@@ -180,7 +180,13 @@
   font-size: 14px;
   float: left;
 }
-
+.navbar-form {
+  float: left;
+  height: 50px;
+  padding: 0;
+  width: 200px;
+  display: inline-table;
+}
 .navbar-form-custom {
   float: left;
   height: 50px;
