sisulehe esialgne kujundus

--- a/public/LESS/base.less
+++ b/public/LESS/base.less
@@ -2,7 +2,7 @@
 
 body {
 	font-family:  "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	background-color: #2f4050;
+	background-color: #ffffff;
 	font-size: 13px;
 	color: @text-color;
 	overflow-x: hidden;
@@ -794,6 +794,9 @@ table.table-mail tr td {
 
 .text-muted {
 	color: @grey;
+}
+.text-lightest-gray {
+	color: @lightest-gray;
 }
 
 .simple_tag {
