--- a/public/LESS/buttons.less
+++ b/public/LESS/buttons.less
@@ -104,14 +104,14 @@
 }
 
 .btn-default {
-  background-color: @grey;
-  border-color: @grey;
+  background-color: @lighter-grey;
+  border-color: @lighter-grey;
   color: #FFFFFF;
 }
 
 .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open .dropdown-toggle.btn-default {
-  background-color: darken(@grey, 3%);
-  border-color: darken(@grey, 3%);
+  background-color: darken(@lighter-grey, 3%);
+  border-color: darken(@lighter-grey, 3%);
   color: #FFFFFF;
 }
 
@@ -120,8 +120,8 @@
 }
 
 .btn-default.disabled, .btn-default.disabled:hover, .btn-default.disabled:focus, .btn-default.disabled:active, .btn-default.disabled.active, .btn-default[disabled], .btn-default[disabled]:hover, .btn-default[disabled]:focus, .btn-default[disabled]:active, .btn-default.active[disabled], fieldset[disabled] .btn-default, fieldset[disabled] .btn-default:hover, fieldset[disabled] .btn-default:focus, fieldset[disabled] .btn-default:active, fieldset[disabled] .btn-default.active {
-  background-color: lighten(@grey, 4%);
-  border-color: lighten(@grey, 4%);
+  background-color: lighten(@lighter-grey, 4%);
+  border-color: lighten(@lighter-grey, 4%);
 }
 
 .btn-warning {
