--- a/public/LESS/media.less
+++ b/public/LESS/media.less
@@ -38,7 +38,7 @@
 		}
 		li.show-icon	{
 			display: inline-block;
-			}
+		}
 	}
 
 	// TTÜ ALERTS
@@ -52,7 +52,14 @@
 		margin: 0 0 0 @sidebar-width;
 		min-height: 1200px;
 	}
-
+	.navbar-form {
+		float: left;
+		height: 30px;
+		padding: 0 0 0 0px;
+		margin: 10px 20px 0;
+		width: 200px;
+		display: inline-table;
+	}
 	.navbar-static-side {
 		z-index: 2001;
 		position: absolute;
