--- a/public/LESS/navigation.less
+++ b/public/LESS/navigation.less
@@ -140,8 +140,8 @@
 }
 
 .nav-header {
-  padding: 33px 25px;
-  background: @nav-profil-pattern;
+  padding: 5px 0px;
+  background: @cherry;
 
 }
 
@@ -179,13 +179,6 @@
   margin: 14px 5px 5px 20px;
   font-size: 14px;
   float: left;
-}
-.navbar-form {
-  float: left;
-  height: 50px;
-  padding: 0;
-  width: 200px;
-  display: inline-table;
 }
 .navbar-form-custom {
   float: left;
@@ -313,7 +306,12 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
   background: #fff;
   color: lighten(@cherry, 3%);
 }
-
+.profile-element {
+	padding: 20px;
+	a:hover, a:focus, a:active, a:visited {
+		color: white;
+	}
+}
 .logo-element {
   text-align: center;
   font-size: 18px;
