--- a/public/LESS/style.less
+++ b/public/LESS/style.less
@@ -26,6 +26,7 @@
 @import "pages.less";
 @import "chat.less";
 @import "spinners.less";
+@import "logos.less";
 
 // For demo only - config box style
 @import "theme-config.less";
