--- a/public/LESS/variables.less
+++ b/public/LESS/variables.less
@@ -59,7 +59,7 @@
 @btn-border-radius: 3px;
 
 //Navigation
-@nav-bg: @cherry;
+@nav-bg: @lightest-grey;
 @nav-profil-pattern: url("patterns/header-profile.png") no-repeat;
 @nav-text-color: #a7b1c2;
 
