--- a/public/LESS/variables.less
+++ b/public/LESS/variables.less
@@ -59,9 +59,9 @@
 @btn-border-radius: 3px;
 
 //Navigation
-@nav-bg: @lightest-grey;
+@nav-bg: #eeeeee;
 @nav-profil-pattern: url("patterns/header-profile.png") no-repeat;
-@nav-text-color: #a7b1c2;
+@nav-text-color: #676a6c;
 
 
 
