--- a/public/LESS/custom.less
+++ b/public/LESS/custom.less
@@ -8,7 +8,13 @@ input:focus {
 	outline-color: @cherry;
 }
 // END FORMS
-
+// DATEPICKER
+.datepicker table tr td.active.active, .datepicker table tr td.active.disabled.active, .datepicker table tr td.active.disabled:active, .datepicker table tr td.active.disabled:focus, .datepicker table tr td.active.disabled:hover, .datepicker table tr td.active.disabled:hover.active, .datepicker table tr td.active.disabled:hover:active, .datepicker table tr td.active.disabled:hover:focus, .datepicker table tr td.active.disabled:hover:hover, .datepicker table tr td.active:active, .datepicker table tr td.active:focus, .datepicker table tr td.active:hover, .datepicker table tr td.active:hover.active, .datepicker table tr td.active:hover:active, .datepicker table tr td.active:hover:focus, .datepicker table tr td.active:hover:hover, .open .dropdown-toggle.datepicker table tr td.active, .open .dropdown-toggle.datepicker table tr td.active.disabled, .open .dropdown-toggle.datepicker table tr td.active.disabled:hover, .open .dropdown-toggle.datepicker table tr td.active:hover {
+	color: #fff;
+    background-color: @cherry;
+    border-color: @darker-cherry;
+}
+// END DATEPICKER
 // LOGIN
 .logo-name {
 	font-family: "PF Centro Sans Pro Light", "Verdana", "Geneva", "sans-serif";
