--- a/public/LESS/navigation.less
+++ b/public/LESS/navigation.less
@@ -3,20 +3,23 @@
 .nav > li > a {
   color: @nav-text-color;
   font-weight: 600;
-  padding: 14px 20px 14px 25px;
+  padding: 14px 15px 14px 14px;
 }
-
+.nav > li > a:focus, .nav > li > a:hover  {
+	color: @cherry;
+	background: transparent;
+}
 .nav.navbar-right > li > a {
   color: #999c9e;
 }
 
 .nav > li.active > a {
-  color: #ffffff;
+  color: @cherry;
 }
 
 .navbar-default .nav > li > a:hover, .navbar-default .nav > li > a:focus {
-  background-color: darken(@nav-bg, 3%);
-  color: white;
+  background-color: transparent;
+  color: @cherry;
 }
 
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
@@ -49,9 +52,73 @@
 }
 
 .navbar-top-links li a {
-  padding: 20px 10px;
+  padding: 15px 10px;
   min-height: 50px;
 }
+
+.dropdown-large {
+  position: static !important;
+}
+.dropdown-menu-large {
+  margin-left: 16px;
+  margin-right: 16px;
+  padding: 20px 0px;
+}
+.dropdown-menu-large > li > ul {
+  padding: 0;
+  margin: 0;
+}
+.dropdown-menu-large > li > ul > li {
+  list-style: none;
+}
+.dropdown-menu-large > li > ul > li > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.428571429;
+  color: #333333;
+  white-space: normal;
+}
+.dropdown-menu-large > li ul > li > a:hover,
+.dropdown-menu-large > li ul > li > a:focus {
+  text-decoration: none;
+  color: #262626;
+  background-color: #f5f5f5;
+}
+.dropdown-menu-large .disabled > a,
+.dropdown-menu-large .disabled > a:hover,
+.dropdown-menu-large .disabled > a:focus {
+  color: #999999;
+}
+.dropdown-menu-large .disabled > a:hover,
+.dropdown-menu-large .disabled > a:focus {
+  text-decoration: none;
+  background-color: transparent;
+  background-image: none;
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  cursor: not-allowed;
+}
+.dropdown-menu-large .dropdown-header {
+  color: @cherry;
+  font-size: 18px;
+}
+@media (max-width: 768px) {
+  .dropdown-menu-large {
+    margin-left: 0 ;
+    margin-right: 0 ;
+  }
+  .dropdown-menu-large > li {
+    margin-bottom: 30px;
+  }
+  .dropdown-menu-large > li:last-child {
+    margin-bottom: 0;
+  }
+  .dropdown-menu-large .dropdown-header {
+    padding: 3px 15px !important;
+  }
+}
+
 
 .dropdown-menu {
   border: medium none;
@@ -59,7 +126,7 @@
   box-shadow: 0 0 3px rgba(86, 96, 117, 0.7);
   display: none;
   float: left;
-  font-size: 12px;
+  font-size: 14px;
   left: 0;
   list-style: none outside none;
   padding: 0;
@@ -307,7 +374,7 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
   color: lighten(@cherry, 3%);
 }
 .profile-element {
-	padding: 20px;
+	padding: 30px;
 	a:hover, a:focus, a:active, a:visited {
 		color: white;
 	}
