--- a/public/LESS/sidebar.less
+++ b/public/LESS/sidebar.less
@@ -39,14 +39,26 @@
 }
 
 // Right sidebar
-
 #right-sidebar {
   background-color: #fff;
   border-left: 1px solid #e7eaec;
   border-top: 1px solid #e7eaec;
   overflow: hidden;
   position: fixed;
-  top: 60px;
+  top: 50px;
+  width: 260px !important;
+  z-index: 1009;
+  bottom: 0;
+  right: -280px;
+}
+// Right sidebar for dashboard
+#right-sidebar-dash {
+  background-color: #fff;
+  border-left: 1px solid #e7eaec;
+  border-top: 1px solid #e7eaec;
+  overflow: hidden;
+  position: fixed;
+  top: 50px;
   width: 260px !important;
   z-index: 1009;
   bottom: 0;
@@ -55,7 +67,7 @@
 
 
 #right-sidebar.sidebar-open {
-  right: 0;
+  right: 0px;
 }
 
 #right-sidebar.sidebar-open.sidebar-top {
@@ -89,7 +101,7 @@
     margin: 0;
     border-radius: 0;
     background: @nav-bg;
-    color: #fff;
+    color: @text-color;
     text-align: center;
 
     border-right:1px solid lighten(@nav-bg, 2%) ;
@@ -98,7 +110,7 @@
   ul.nav-tabs li.active a {
     border: none;
     background: #f9f9f9;
-    color: @text-color;
+    color: @cherry;
     font-weight: bold;
 
   }
