added 3 level nav menus

--- a/public/LESS/base.less
+++ b/public/LESS/base.less
@@ -640,14 +640,14 @@ table.table-mail tr td {
 /* BACKGROUNDS */
 
 .gray-bg {
-	background-color: #fcfcfc;
+	background-color: @lightest-grey;
 }
 
 .white-bg {
 	background-color: #ffffff;
 }
 
-.navy-bg {
+.cherry-bg {
 	background-color: @cherry;
 	color: #ffffff;
 }
