--- a/public/LESS/media.less
+++ b/public/LESS/media.less
@@ -69,6 +69,14 @@
 			width: 200px;
 			display: inline-table;
 		}
+		.navbar-form .input-group {
+			float: left;
+			height: 10px;
+			padding: 0 0 0 0px;
+			margin: 0px 0px 0;
+			width: 200px;
+			display: ;
+		}
 		.navbar-static-side {
 			z-index: 2001;
 			position: absolute;
