--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,17 +100,68 @@ h5 {
   padding: 0;
   margin: 0;
 }
-.dropdown-menu-large > li > ul > li {
+.dropdown-menu-large > li > ul > ul {
   list-style: none;
+  padding: 0 0 0 0px;
 }
-.dropdown-menu-large > li > ul > li > a {
+.dropdown-menu-large > li > ul > div,
+.dropdown-menu-large .level1,
+.dropdown-menu-large .dropdown-header a {
+  color: #870042;
+  font-size: 18px;
+  padding: 10px 0 5px 0;
+}
+.dropdown-menu-large > li > ul > ul > li > div,
+.dropdown-menu-large .level2,
+.dropdown-menu-large .level-2 {
   display: block;
-  padding: 3px 20px;
+  padding: 3px 0px;
   clear: both;
   font-weight: normal;
   line-height: 1.428571429;
-  color: #333333;
+  color: #676a6c;
   white-space: normal;
+}
+a.active:hover {
+  border-bottom: 1px solid #870042;
+}
+.dropdown-menu-large .l3 {
+  position: absolute;
+  background: white;
+  border: 1px solid #e8e8e9;
+  padding: 15px 20px 15px 10px;
+}
+.dropdown-menu-large .l3:after,
+.dropdown-menu-large .l3:before {
+  right: 100%;
+  top: 45px;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 100%;
+  position: absolute;
+  pointer-events: none;
+}
+.dropdown-menu-large .l3:after {
+  border-color: rgba(255, 255, 255, 0);
+  border-right-color: #ffffff;
+  border-width: 10px;
+  margin-top: -30px;
+}
+.dropdown-menu-large .l3:before {
+  border-color: rgba(204, 202, 207, 0);
+  border-right-color: #cccacf;
+  border-width: 11px;
+  margin-top: -31px;
+}
+.dropdown-menu-large .l3 .level-3 {
+  margin: 0 0 0 10px;
+  padding: 0 0 3px 0;
+  font-size: 14px;
+  list-style: none;
+}
+.dropdown-menu-large .l3 .level-3 :hover {
+  border-bottom: 1px solid #870042;
 }
 .dropdown-menu-large > li ul > li > a:hover,
 .dropdown-menu-large > li ul > li > a:focus {
@@ -134,6 +185,64 @@ h5 {
 .dropdown-menu-large .dropdown-header {
   color: #870042;
   font-size: 18px;
+}
+.dropdown-large {
+  position: static !important;
+}
+.dropdown-menu-large {
+  margin-left: 16px;
+  margin-right: 16px;
+  padding: 20px 0px;
+}
+.dropdown-menu-large > li > ul {
+  padding: 0;
+  margin: 0;
+}
+.dropdown-menu-large > li > ul > li {
+  list-style: none;
+}
+/*.dropdown-menu-large > li > ul > li > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.428571429;
+  color: #333333;
+  white-space: normal;
+}*/
+.dropdown-menu-large > li ul > li > a:hover,
+.dropdown-menu-large > li ul > li > a:focus {
+  text-decoration: none;
+  color: #262626;
+  background-color: #f5f5f5;
+}
+.dropdown-menu-large .disabled > a,
+.dropdown-menu-large .disabled > a:hover,
+.dropdown-menu-large .disabled > a:focus {
+  color: #999999;
+}
+.dropdown-menu-large .disabled > a:hover,
+.dropdown-menu-large .disabled > a:focus {
+  text-decoration: none;
+  background-color: transparent;
+  background-image: none;
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+  cursor: not-allowed;
+}
+@media (max-width: 768px) {
+  .dropdown-menu-large {
+    margin-left: 0 ;
+    margin-right: 0 ;
+  }
+  .dropdown-menu-large > li {
+    margin-bottom: 30px;
+  }
+  .dropdown-menu-large > li:last-child {
+    margin-bottom: 0;
+  }
+  .dropdown-menu-large .dropdown-header {
+    padding: 3px 15px !important;
+  }
 }
 @media (max-width: 768px) {
   .dropdown-menu-large {
@@ -393,7 +502,7 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
 }
 .navbar-fixed-top,
 .navbar-static-top {
-  background: #fcfcfc;
+  background: #870042;
 }
 .fixed-nav #wrapper {
   margin-top: 60px;
@@ -606,7 +715,7 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 }
 .top-navigation .navbar-nav .open .dropdown-menu > li > a,
 .top-navigation .navbar-nav .open .dropdown-menu .dropdown-header {
-  padding: 10px 15px 10px 20px;
+  padding: 10px 15px 10px 0px;
 }
 @media (max-width: 768px) {
   .top-navigation .navbar-header {
@@ -1844,7 +1953,7 @@ table.dataTable thead .sorting:after {
   font-size: 12px;
 }
 .todo-list.small-list > li {
-  background: #fcfcfc;
+  background: #870042;
   border-left: none;
   border-right: none;
   border-radius: 4px;
@@ -1860,7 +1969,7 @@ table.dataTable thead .sorting:after {
   padding: 1px 2px 1px 5px;
 }
 .todo-list > li {
-  background: #fcfcfc;
+  background: #870042;
   border-left: 6px solid #e8e8e9;
   border-right: 6px solid #e8e8e9;
   border-radius: 4px;
@@ -2911,7 +3020,7 @@ a.forum-item-title:hover {
 }
 .sidebard-panel {
   width: 220px;
-  background: #f4f4f4;
+  background: #78003b;
   padding: 10px 20px;
   position: absolute;
   right: 0;
@@ -3609,12 +3718,12 @@ table.table-mail tr td {
 }
 /* BACKGROUNDS */
 .gray-bg {
-  background-color: #fcfcfc;
+  background-color: #e8e8e9;
 }
 .white-bg {
   background-color: #ffffff;
 }
-.navy-bg {
+.cherry-bg {
   background-color: #870042;
   color: #ffffff;
 }
@@ -4394,7 +4503,7 @@ ul.notes li div {
 }
 .tag-list li a {
   font-size: 10px;
-  background-color: #fcfcfc;
+  background-color: #870042;
   padding: 5px 12px;
   color: inherit;
   border-radius: 2px;
@@ -5924,7 +6033,7 @@ del {
 .skin-setttings {
   width: 220px;
   margin-left: 40px;
-  background: #fcfcfc;
+  background: #870042;
 }
 .skin-setttings .title {
   background: #efefef;
@@ -6399,6 +6508,14 @@ body.skin-3 {
     margin: 10px 20px 0;
     width: 200px;
     display: inline-table;
+  }
+  .navbar-form .input-group {
+    float: left;
+    height: 10px;
+    padding: 0 0 0 0px;
+    margin: 0px 0px 0;
+    width: 200px;
+    display: ;
   }
   .navbar-static-side {
     z-index: 2001;
