navbar large  dropdown enhancements

--- a/public/LESS/base.less
+++ b/public/LESS/base.less
@@ -640,7 +640,7 @@ table.table-mail tr td {
 /* BACKGROUNDS */
 
 .gray-bg {
-	background-color: @lightest-grey;
+	background-color: #fcfcfc;
 }
 
 .white-bg {
