--- a/public/LESS/variables.less
+++ b/public/LESS/variables.less
@@ -38,7 +38,7 @@
 @matemaatika: #999a1f;
 @mehaanika: #1c4735;
 
-// Spiner color and margin
+// Spinner color and margin
 @spin-color: @cherry;
 @spin-margin: 0 auto;
 
