--- a/public/LESS/navigation.less
+++ b/public/LESS/navigation.less
@@ -89,7 +89,7 @@
 
 
 }
-a.active:hover {
+li.level-2 a:hover {
 		border-bottom: 1px solid @cherry;
 }
 // carret box
@@ -98,6 +98,9 @@ a.active:hover {
 		background: white;
 		border: 1px solid @lightest-grey;
 		padding: 15px 20px 15px 10px;
+		width: auto;
+		white-space: nowrap;
+		z-index: 999;
 }
 .dropdown-menu-large .l3:after, .dropdown-menu-large .l3:before {
 	right: 100%;
@@ -126,7 +129,7 @@ a.active:hover {
 .dropdown-menu-large .l3 .level-3 {
 
 	//background: @lightest-grey;
-	margin: 0 0 0 10px;
+		margin: 0 0 0 10px;
 	padding: 0 0 3px 0;
 	font-size: 14px;
 		list-style: none;
