--- a/public/LESS/base.less
+++ b/public/LESS/base.less
@@ -642,34 +642,34 @@ table.table-mail tr td {
 .gray-bg {
 	background-color: #fcfcfc;
 }
-
+.gray-darker-bg {
+	background-color: @lightest-grey;
+}
+.gray-darkest-bg {
+	background-color: @lighter-grey;
+}
 .white-bg {
 	background-color: #ffffff;
 }
 
 .cherry-bg {
 	background-color: @cherry;
-	color: #ffffff;
 }
 
 .blue-bg {
 	background-color: @blue;
-	color: #ffffff;
 }
 
 .lazur-bg {
 	background-color: @lazur;
-	color: #ffffff;
 }
 
 .yellow-bg {
 	background-color: @yellow;
-	color: #ffffff;
 }
 
 .red-bg {
 	background-color: @red;
-	color: #ffffff;
 }
 
 .black-bg {
