--- a/public/LESS/navigation.less
+++ b/public/LESS/navigation.less
@@ -371,9 +371,11 @@ li.level-2 a:hover {
   height: 50px;
   padding: 0;
   width: 200px;
-  display: inline-table;
+  display: inline;
 }
-
+.navbar-form-custom .input-group {
+  margin-bottom: 0;
+}
 .navbar-form-custom .form-group {
   margin-bottom: 0;
 }
@@ -386,8 +388,8 @@ li.level-2 a:hover {
   background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
   border: medium none;
   font-size: 14px;
-  height: 50px; //edited | orig. 60px
-  margin: 0;
+  height: 30px; //edited | orig. 60px
+  margin: 10px 0 0 0;
   z-index: 2000;
 }
 
