--- a/public/css/style.css
+++ b/public/css/style.css
@@ -369,7 +369,10 @@ li.level-2 a:hover {
   height: 50px;
   padding: 0;
   width: 200px;
-  display: inline-table;
+  display: inline;
+}
+.navbar-form-custom .input-group {
+  margin-bottom: 0;
 }
 .navbar-form-custom .form-group {
   margin-bottom: 0;
@@ -381,8 +384,8 @@ li.level-2 a:hover {
   background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
   border: medium none;
   font-size: 14px;
-  height: 50px;
-  margin: 0;
+  height: 30px;
+  margin: 10px 0 0 0;
   z-index: 2000;
 }
 .count-info .label {
@@ -3723,28 +3726,29 @@ table.table-mail tr td {
 .gray-bg {
   background-color: #fcfcfc;
 }
+.gray-darker-bg {
+  background-color: #e8e8e9;
+}
+.gray-darkest-bg {
+  background-color: #c9c9c9;
+}
 .white-bg {
   background-color: #ffffff;
 }
 .cherry-bg {
   background-color: #870042;
-  color: #ffffff;
 }
 .blue-bg {
   background-color: #23c6c8;
-  color: #ffffff;
 }
 .lazur-bg {
   background-color: #1ab394;
-  color: #ffffff;
 }
 .yellow-bg {
   background-color: #f8ac59;
-  color: #ffffff;
 }
 .red-bg {
   background-color: #ed5565;
-  color: #ffffff;
 }
 .black-bg {
   background-color: #262626;
