change searchbar position according to viewport

--- a/public/LESS/sidebar.less
+++ b/public/LESS/sidebar.less
@@ -7,6 +7,11 @@
   position: absolute;
   right: 0;
 }
+.sidebar-search {
+	padding: 0px 0px 10px 0px;
+	background: @cherry;
+	display: none;
+}
 
 .sidebard-panel .feed-element img.img-circle {
   width: 32px;
