--- a/public/LESS/media.less
+++ b/public/LESS/media.less
@@ -14,7 +14,7 @@
 	.navbar-toggle {
 		display: none;
 	}
-	// TTÜ ALERTS
+	//TTÜ ALERTS
 	#ttu-alert-mobile {
 		display:none;
 	}
@@ -24,6 +24,11 @@
 	}
 }
 @media (max-width: 1199px) {
+	//SIDEBAR
+	.sidebar-search {
+		display: block;
+	}
+
 	//NAVBAR
 	.nav li .profile-element {
 		margin: 0;
@@ -33,12 +38,19 @@
 	.nav li a {
 		padding: 15px 10px 10px 10px;
 	}
+	.navbar-search {
+		display: none;
+	}
 	.navbar-form-custom {
 		display: none;
 	}
+
 	.navbar-toggle {
 
 	}
+	.navbar-top-links li:last-child {
+  margin-right: 1px;
+}
 	.navbar-right {
 		margin-right: 0px;
 		li {
@@ -50,6 +62,7 @@
 			}
 		}
 	}
+
 		// TTÜ ALERTS
 		#ttu-alert-desktop {
 			display:none;
