--- a/public/LESS/badgets_labels.less
+++ b/public/LESS/badgets_labels.less
@@ -28,7 +28,7 @@
 }
 
 .label-success, .badge-success {
-  background-color: @blue;
+  background-color: @green;
   color: #FFFFFF;
 }
 
@@ -48,7 +48,7 @@
 }
 
 .label-info, .badge-info {
-  background-color: @lazur;
+  background-color: @blue;
   color: #FFFFFF;
 }
 
@@ -79,7 +79,7 @@
 .label-success-o, .badge-success-o {
   background-color: transparent;
   color: @text-color;
-  border: 1px solid @lazur;
+  border: 1px solid @green;
 }
 
 .label-warning-o, .badge-warning-o {
