--- a/public/LESS/media.less
+++ b/public/LESS/media.less
@@ -18,6 +18,10 @@
 	#ttu-alert-mobile {
 		display:none;
 	}
+	//TTÜ MESSAGES
+		#ttu-message-mobile {
+		display:none;
+	}
 	.navbaar-right {
 		float: right!important;
 		margin-right: -15px;
@@ -65,6 +69,10 @@
 
 		// TTÜ ALERTS
 		#ttu-alert-desktop {
+			display:none;
+		}
+		// TTÜ MESSAGE
+		#ttu-message-desktop {
 			display:none;
 		}
 	}
