--- a/public/LESS/variables.less
+++ b/public/LESS/variables.less
@@ -19,6 +19,7 @@
 @lazur: #1ab394;      // Info color
 @yellow: #f8ac59;     // Warrning color
 @red: #ED5565;        // Danger color
+@green: #1ab394;			// Success color
 
 @grey-btn: #DDDDDD; // Grey button color
 
