--- a/public/LESS/top_navigation.less
+++ b/public/LESS/top_navigation.less
@@ -19,8 +19,9 @@
 }
 
 .top-navigation .nav > li > a {
-  padding: 15px 20px;
-  color: #676a6c;
+  font-size: 14px;
+	padding: 15px 20px;
+  color: white;
 }
 
 .top-navigation .nav > li a:hover, .top-navigation .nav > li a:focus {
