--- a/public/css/style.css
+++ b/public/css/style.css
@@ -451,6 +451,15 @@ white-space: normal;
 #srch-term:focus::-webkit-input-placeholder {
   color: #676a6c;
 }
+#srch-term:focus:-moz-placeholder {
+  color: #676a6c;
+}
+#srch-term:focus::-moz-placeholder {
+  color: #676a6c;
+}
+#srch-term:focus:-ms-input-placeholder {
+  color: #676a6c;
+}
 /* end
 --------------------------------------------------------------------*/
 .count-info .label {
@@ -3655,7 +3664,8 @@ img.circle-border {
   margin: 1px;
   display: block;
 }
-.ui-draggable .ibox-title {
+.ui-draggable .ibox-title,
+.ui-draggable .ibox-title-full {
   cursor: move;
 }
 .breadcrumb {
@@ -3720,6 +3730,33 @@ code {
   border-style: solid solid none;
   border-width: 1px 0px;
 }
+.ibox-title-full {
+  -moz-border-bottom-colors: none;
+  -moz-border-left-colors: none;
+  -moz-border-right-colors: none;
+  -moz-border-top-colors: none;
+  background-color: #870042;
+  border-color: #6d0036;
+  border-image: none;
+  border-style: solid solid none;
+  border-width: 4px 0px 0;
+  color: white;
+  margin-bottom: 0;
+  padding: 14px 15px 7px;
+  min-height: 48px;
+}
+.ibox-title-full .ibox-tools a {
+  color: white;
+}
+.ibox-content-full {
+  background-color: #870042;
+  color: inherit;
+  padding: 0px;
+  border-color: #e8e8e9;
+  border-image: none;
+  border-style: solid solid none;
+  border-width: 0px 0px;
+}
 table.table-mail tr td {
   padding: 12px;
 }
@@ -3757,7 +3794,8 @@ table.table-mail tr td {
   font-weight: 200;
   font-size: 24px;
 }
-.ibox-title h5 {
+.ibox-title h5,
+.ibox-title-full h5 {
   display: inline-block;
   font-size: 14px;
   margin: 0 0 7px;
@@ -3765,7 +3803,8 @@ table.table-mail tr td {
   text-overflow: ellipsis;
   float: left;
 }
-.ibox-title .label {
+.ibox-title .label,
+.ibox-title-full .label {
   float: left;
   margin-left: 4px;
 }
