--- a/public/LESS/base.less
+++ b/public/LESS/base.less
@@ -476,7 +476,7 @@ img.circle-border {
 	display: block;
 }
 
-.ui-draggable .ibox-title {
+.ui-draggable .ibox-title, .ui-draggable .ibox-title-full {
 	cursor: move;
 }
 
@@ -550,6 +550,33 @@ code {
 	border-style: solid solid none;
 	border-width: 1px 0px;
 }
+.ibox-title-full {
+	-moz-border-bottom-colors: none;
+	-moz-border-left-colors: none;
+	-moz-border-right-colors: none;
+	-moz-border-top-colors: none;
+	background-color: @cherry;
+	border-color: @darker-cherry;
+	border-image: none;
+	border-style: solid solid none;
+	border-width: 4px 0px 0;
+	color: white;
+	margin-bottom: 0;
+	padding: 14px 15px 7px;
+	min-height: 48px;
+}
+.ibox-title-full .ibox-tools a {
+	color: white;
+}
+.ibox-content-full {
+	background-color: @cherry;
+	color: inherit;
+	padding: 0px;
+	border-color: @border-color;
+	border-image: none;
+	border-style: solid solid none;
+	border-width: 0px 0px;
+}
 
 table.table-mail tr td {
 	padding: 12px;
@@ -595,7 +622,7 @@ table.table-mail tr td {
 	font-size: 24px;
 }
 
-.ibox-title h5 {
+.ibox-title h5, .ibox-title-full h5 {
 	display: inline-block;
 	font-size: 14px;
 	margin: 0 0 7px;
@@ -604,7 +631,7 @@ table.table-mail tr td {
 	float: left;
 }
 
-.ibox-title .label {
+.ibox-title .label, .ibox-title-full .label {
 	float: left;
 	margin-left: 4px;
 }
