search box styling

--- a/public/LESS/navigation.less
+++ b/public/LESS/navigation.less
@@ -456,6 +456,15 @@ white-space: normal;
 #srch-term:focus::-webkit-input-placeholder {
    color: @text-color;
 }
+#srch-term:focus:-moz-placeholder {
+   color: @text-color;
+}
+#srch-term:focus::-moz-placeholder {
+   color: @text-color;
+}
+#srch-term:focus:-ms-input-placeholder {
+   color: @text-color;
+}
 /* end
 --------------------------------------------------------------------*/
 .count-info .label {
