--- a/public/LESS/elements.less
+++ b/public/LESS/elements.less
@@ -1,7 +1,40 @@
 // main: style.less
 
-/* TOOGLE SWICH */
+/* MY PROFILE
+---------------------------------------------------------------------*/
+#my-profile-1 {
+	background: white;
+	color: @text-color;
+	position: static;
+	height: 320px;
+	width: 100%;
+	top: 0px;
+	left: 0px;
+	float: left;
+	display: block;
+	margin: -41px 0 25px 0px;
+	 -webkit-box-shadow: 2px 4px 6px 0 rgba(0, 0, 0, .1);
+  box-shadow: 2px 4px 6px 0 rgba(0, 0, 0, .1);
+	border-top: 1px solid @lighter-grey;
+}
 
+#my-profile-2 {
+	background: @cherry;
+	color: white;
+	position: static;
+	height: 320px;
+	width: 100%;
+	top: 0px;
+	left: 0px;
+	float: left;
+	display: block;
+	margin: -41px 0 25px 0px;
+	 -webkit-box-shadow: 2px 4px 6px 0 rgba(0, 0, 0, .1);
+  box-shadow: 2px 4px 6px 0 rgba(0, 0, 0, .1);
+	border-top: 1px solid @darker-cherry;
+}
+/* TOGLE SWICH
+---------------------------------------------------------------------*/
 .onoffswitch {
   position: relative;
   width: 64px;
