--- a/public/LESS/top_navigation.less
+++ b/public/LESS/top_navigation.less
@@ -1,68 +1,68 @@
 // main: style.less
 
 .top-navigation #page-wrapper {
-  margin-left: 0;
+	margin-left: 0;
 }
 
 .top-navigation .navbar-nav .dropdown-menu > .active > a {
-  background: white;
-  color: @cherry;
-  font-weight: bold;
+	background: white;
+	color: @cherry;
+	font-weight: bold;
 }
 
 .white-bg .navbar-fixed-top, .white-bg .navbar-static-top {
-  background: #fff;
+	background: #fff;
 }
 
 .top-navigation .navbar {
-  margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 .top-navigation .nav > li > a {
-  font-size: 14px;
-	padding: 15px 20px;
-  color: white;
+	font-size: 14px;
+	padding: 20px 20px;
+	color: white;
 }
 
 .top-navigation .nav > li a:hover, .top-navigation .nav > li a:focus {
-  background: #fff;
-  color: @cherry;
+	background: #fff;
+	color: @cherry;
 }
 
 .top-navigation .nav > li.active {
-  background: white;
-  border: none;
+	background: white;
+	border: none;
 }
 .top-navigation .nav > li.active > a {
-  color: @cherry;
+	color: @cherry;
 }
 .top-navigation .navbar-right {
-  margin-right: 10px;
+	margin-right: 0px;
 }
 
 .top-navigation .navbar-nav .dropdown-menu {
-  box-shadow: none;
-  border: 1px solid #e7eaec;
+	box-shadow: none;
+	border: 1px solid #e7eaec;
 }
 
 .top-navigation .dropdown-menu > li > a {
-  margin: 0;
-  padding: 7px 20px;
+	margin: 0;
+	padding: 7px 20px;
 }
 
 .navbar .dropdown-menu {
-  margin-top: 0px;
+	margin-top: 0px;
 }
 
 .top-navigation .navbar-brand {
-  width: 150px;
-  background: @cherry;
-  color: #fff;
-  padding: 0px 25px;
+	width: 150px;
+	background: @cherry;
+	color: #fff;
+	padding: 0px 25px;
 }
 
 .top-navigation .navbar-top-links li:last-child {
-  margin-right: 0;
+	margin-right: 0;
 }
 
 .top-navigation.mini-navbar #page-wrapper,
@@ -70,62 +70,90 @@
 .mini-navbar .top-navigation #page-wrapper,
 .body-small.fixed-sidebar.mini-navbar .top-navigation #page-wrapper,
 .canvas-menu #page-wrapper {
-  margin: 0;
+	margin: 0;
 }
 
 .top-navigation.fixed-nav #wrapper, .fixed-nav #wrapper.top-navigation {
-  margin-top: 50px;
+	margin-top: 50px;
 }
 
 .top-navigation .footer.fixed {
-  margin-left: 0 !important;
+	margin-left: 0 !important;
 }
 
 .top-navigation .wrapper.wrapper-content {
-  padding: 40px;
+	padding: 40px;
 }
 .top-navigation.body-small .wrapper.wrapper-content, .body-small  .top-navigation .wrapper.wrapper-content {
-  padding: 40px 0px 40px 0px;
+	padding: 40px 0px 40px 0px;
 }
 
 .navbar-toggle {
-  background-color: @cherry;
-  color: #fff;
-  padding: 6px 12px;
-  font-size: 14px;
+	background-color: @cherry;
+	color: #fff;
+	padding: 6px 12px;
+	font-size: 14px;
 }
 
 .top-navigation .navbar-nav .open .dropdown-menu > li > a, .top-navigation .navbar-nav .open .dropdown-menu .dropdown-header {
-  padding: 10px 15px 10px 0px;
+	padding: 10px 15px 10px 0px;
 }
-
+#dash-mobile-search {
+	padding: 0 0 10px 0;
+	border-bottom: 1px solid white;
+}
+#dash-mobile-search input {
+	height: 60px;
+}
+@media (max-width: 1199px) {
+	.navbar-top-links li:last-child {
+		margin-right: 1px;
+	}
+}
 @media (max-width: 768px) {
-  .top-navigation .navbar-header {
-    display: block;
-    float: none;
-  }
+	.top-navigation .navbar-header {
+		display: block;
+		float: none;
+		padding: 5px 0 10px 0;
+		border-bottom: 1px solid white;
+	}
+	.menu-visible-md {
+		display: block !important;
+	}
+	.menu-visible-lg {
+		display: block !important;
+	}
 }
-
+.top-navigation .navbar-right {
+	margin-left: 0px;
+}
 .menu-visible-lg, .menu-visible-md {
-  display: none !important;
+	display: none !important;
 }
 
+@media (max-width: 350px) {
+	.nav.navbar-top-links li.dropdown {
+		display: none;
+	}
+}
 @media (min-width: 1200px) {
-  .menu-visible-lg {
-    display: block !important;
-  }
+	.menu-visible-lg {
+		display: block !important;
+	}
 }
 @media (min-width: 992px) {
-  .menu-visible-md {
-    display: block !important;
-  }
+	.menu-visible-md {
+		display: block !important;
+	}
 }
+@media (min-width: 768px) {
+	.navbar-top-links .dropdown-messages,
+	.navbar-top-links .dropdown-tasks,
+	.navbar-top-links .dropdown-alerts {
+		margin-left: auto;
+	}
+	#dash-mobile-search {
+		display: none;
+	}
 
-@media (max-width: 767px) {
-  .menu-visible-md {
-    display: block !important;
-  }
-  .menu-visible-lg {
-    display: block !important;
-  }
 }
